src/styles.css
/*//normalizers*/

* {
  margin:0;
  padding:0;
}

html {
  box-sizing: border-box;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}
*, *:before, *:after {
  box-sizing: inherit;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

a {
  background-color: transparent;
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}

b, strong {
  font-weight: bolder;
}

code, kbd, samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

sub, sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

img {
  border-style: none;
}

button, input, optgroup, select, textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

button, input {
  overflow: visible;
}

button, select {
  text-transform: none;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

details {
  display: block;
}

summary {
  display: list-item;
}

/*////////////////////////*/

@media only screen and (max-width: 2024px) {
  .nav-item {
    padding-bottom: 40px !important;
  }
}

@media screen and (max-width: 1024px) {
  .announcement p {
    font-size: 13px;
  }
}

@media only screen and (max-width: 640px) {
  .nav-parent {
    padding: .25em .5em .33em !important;
    border-width: 1px;
  }
  .nav-item {
    padding: 0 !important;
  }
  .content-images {
    padding: 25px !important;
  }
}

@media only screen and (max-width: 640px) {
.nav-options::before {
  position: absolute;
  top: 50%;
  right: .5em;
  margin-top: -.45em;
  font-size: 16px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  font-style: normal;
  font-weight: normal;
  -webkit-font-smoothing: antialiased;
  content: "";
  text-align: center;
  display: inline-block;
  vertical-align: middle;
  }
}

.nav-options select {
  display: none;
}

@media only screen and (max-width: 640px) {
  .nav-options select {display: show;}
  .nav-options select {
  margin: 0;
  width: 100%;
  border: solid 0px transparent;
  background-color: transparent;
  border-radius: 0;
  text-indent: .1px;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  font-size: 18px;
  color: #636363;
  padding: 0 .8em;
  font-size: 16px;
  line-height: 1.5em;
  letter-spacing: 2px;
  font-weight: lighter;
  font-family: Futura, sans-serif;
  position: relative;
  z-index: 1;
  text-transform: uppercase;
  display: inline-block;
  vertical-align: middle;
  }
  .flex-list{
    display: flex;
    align-items: center;
    flex-direction: column;
  }
  .left-footer-list, .right-footer-list{
    padding: 0px;
    text-align: center;
  }
}

@media only screen and (max-width: 640px) {
  .nav-options::before {
    position: absolute;
    top: 50%;
    right: .5em;
    margin-top: -.45em;
  }
}

@media only screen and (max-width: 640px) {
  .nav-options p{display: none;}
  .nav-options::after {
    position: absolute;
    top: 50%;
    right: .5em;
    margin-top: -.45em;
  }
}


@media only screen and (max-width: 640px) {
  .nav-bar-info {
    border-color: rgba(0,0,0,0);
    border-style: solid;
    position: relative;
    z-index: 100;
  }
}

@media only screen and (max-width: 480px) {
   .content-images, .footer-item {
    padding: 20px !important;
  }

  .nav-parent {
    padding: 0 40px !important;
  }
}


/*font*/
@import url('https://fonts.googleapis.com/css?family=Tajawal:300');

.body {
  font-size: 17px;
  background-color: white;
}

.announcement-item {
  display:flex;
  align-items: center;
  padding: 10px 50px 10px 50px;
  background-color: #ffd175;
  color:white;
  position: relative;
}

.close-announcements {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  width: 2.8em;
  height: 2.78em;
  background: rgba(0,0,0,.15);
  color: #fff;
  display: flex;
  justify-content: center;
}

.close-announcements:after {
  content: '×';
  font-family:sans-serif;
  font-size: 1em;
  font-weight: 100;
  line-height: 2.7em;
  letter-spacing: normal;
  padding: 0;
}

.announcement {
  font-family: 'Tajawal', sans-serif;
  font-weight: 400;
  font-size: 17px;
  font-weight: 300;
  font-style: normal;
  letter-spacing: 1px;
  text-transform: none;
  line-height: inherit;
  width: 100%;
  height: 100%;
}

.nav-item {
  background-color: white;
  margin: 0 auto;
  display: block;
  position: relative;
  text-align: center;
  width: 100%;
  display: flex;
  justify-content: center;
}

.nav-options {
  display:flex;
  justify-content: space-between;
  flex-direction: row;
  text-transform: uppercase;
  color: #636363;
  padding: 0 .8em;
  font-size: 16px;
  line-height: 1.5em;
  letter-spacing: 2px;
  font-weight: lighter;
  font-family: Futura, sans-serif;
}

#logo {
  height: 260px;
  width: auto;
  margin-bottom: 20px;
}

.content-images {
  padding: 70px 100px;
}

.grid-images {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  justify-content: center;
  grid-auto-flow: dense;
  position: relative;
  margin: auto;
  max-width:1090px;
}

.img-gallery-item {
  display: flex;
  justify-content: center;
  align-items: center;
}

img {
  width: 100%;
  height: 100%;
  display: inline-block;
}

.footer-item {
  background-color: #fff;
  height: 330px;
  color: #636363;
}

.footer-item #instagram {
  display: flex;
  justify-content: center;
  padding-bottom: 20px;
}

.footer-item .fab {
  font-size: 30px;
}

.flex-list {
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.left-footer-list {
  align-self: flex-start;
}

.left-footer-list, .right-footer-list{
  /*padding: 90px;*/

  text-align: center;
}

.left-footer-list p, .right-footer-list p{
  padding: 14px;
  font-size: 13px;
  font-weight: bold;
}

